--- a/css/main.css
+++ b/css/main.css
@@ -124,12 +124,15 @@ body {
 
 .form__input {
   width: 300px;
-  padding: 36px 3px 133px 12px;
+  padding: 36px 3px 133px 15px;
   font-size: 1.5em;
   border: 0; }
   .form__input:nth-of-type(1) {
     border-right: 1px solid #ccc;
-    border-bottom: 1px solid #ccc; }
+    border-bottom: 1px solid #ccc;
+    border-top-left-radius: 4px; }
+  .form__input:nth-of-type(2) {
+    border-top-right-radius: 4px; }
   .form__input:nth-of-type(3) {
     border-left: 1px solid #ccc;
     margin-bottom: 5px; }
