--- a/css/main.css
+++ b/css/main.css
@@ -126,16 +126,10 @@ body {
   width: 300px;
   padding: 36px 3px 133px 15px;
   font-size: 1.5em;
-  border: 0; }
-  .form__input:nth-of-type(1) {
-    border-right: 1px solid #ccc;
-    border-bottom: 1px solid #ccc;
-    border-top-left-radius: 4px; }
-  .form__input:nth-of-type(2) {
-    border-top-right-radius: 4px; }
-  .form__input:nth-of-type(3) {
-    border-left: 1px solid #ccc;
-    margin-bottom: 5px; }
+  border: 0;
+  outline: none; }
+  .form__input:focus {
+    box-shadow: inset 0 0 2px 2px blue; }
 
 .form__control {
   border: none;
