--- a/sass/main.scss
+++ b/sass/main.scss
@@ -159,18 +159,22 @@ body{
 	padding: 36px 3px 133px 15px;
 	font-size: 1.5em;
 	border:0;
-	&:nth-of-type(1){
-		border-right: 1px solid #ccc;
-		border-bottom: 1px solid #ccc;
-		 border-top-left-radius: 4px;
+	outline:none;
+	&:focus{
+		box-shadow: inset 0 0 2px 2px blue;
 	}
-	 &:nth-of-type(2){
-	 	border-top-right-radius: 4px;
-	 }
-	&:nth-of-type(3){
-		border-left: 1px solid #ccc;
-		margin-bottom: 5px;
-	}
+	// &:nth-of-type(1){
+	// 	border-right: 1px solid #ccc;
+	// 	border-bottom: 1px solid #ccc;
+	// 	 border-top-left-radius: 4px;
+	// }
+	//  &:nth-of-type(2){
+	//  	border-top-right-radius: 4px;
+	//  }
+	// &:nth-of-type(3){
+	// 	border-left: 1px solid #ccc;
+	// 	margin-bottom: 5px;
+	// }
 }
 .form__control{
 	border:none;
