--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,7 @@ body {
   width: 300px;
   padding: 36px 3px 133px 15px;
   font-size: 1.5em;
-  border: 1px solid #ccc;
+  box-shadow: inset 0 1px 0 #ccc;
   outline: none; }
   .form__input:focus {
     box-shadow: inset 0 0 2px 2px blue; }
