--- a/css/main.css
+++ b/css/main.css
@@ -130,7 +130,7 @@ body {
   box-shadow: inset 0 0 0 1px  #ccc;
   outline: none; }
   .form__input:focus {
-    box-shadow: inset 0 0 2px 2px blue; }
+    box-shadow: inset 0 0 1px 1px red; }
 
 .form__control {
   border: none;
