--- a/sass/main.scss
+++ b/sass/main.scss
@@ -162,7 +162,7 @@ body{
 	box-shadow: inset 0 0 0 1px  #ccc;
 	outline:none;
 	&:focus{
-		box-shadow: inset 0 0 2px 2px blue;
+		box-shadow: inset 0 0 1px 1px red;
 	}
 	// &:nth-of-type(1){
 	// 	border-right: 1px solid #ccc;
