--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,9 @@ fieldset {
 textarea {
   resize: vertical; }
 
+li {
+  list-style: none; }
+
 /* ==========================================================================
 	 Author's custom styles
 	 ========================================================================== */
@@ -84,14 +87,10 @@ body {
 
 .popup {
   width: 602px;
-  height: 557px;
-  border: 1px solid #000;
   position: absolute;
-  margin: auto;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0; }
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
 
 .fa {
   font-size: 3.75em;
@@ -106,6 +105,24 @@ body {
 .fa:hover {
   transform: scale(1.1) rotate(360deg);
   opacity: 0.6; }
+
+.active {
+  opacity: 1; }
+
+.tabs__item {
+  display: inline-block; }
+
+.tabs__content {
+  width: 600px;
+  height: 400px;
+  overflow: hidden; }
+
+.slider__item {
+  width: 600px;
+  height: 400px;
+  background-color: #fff;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px; }
 
 .form__list {
   margin-bottom: 5px; }
@@ -122,19 +139,42 @@ body {
   font-size: 1.25em;
   color: #ccc; }
 
+.tri {
+  position: absolute;
+  top: 68px;
+  left: 46px;
+  width: 0;
+  height: 0;
+  border-left: 18px solid transparent;
+  border-right: 18px solid transparent;
+  border-bottom: 20px solid #fff; }
+
 .form__input {
   width: 300px;
   padding: 36px 3px 133px 15px;
   font-size: 1.5em;
   border: none;
-  box-shadow: inset 0 0 0 1px  #ccc;
   outline: none; }
   .form__input:focus {
-    box-shadow: inset 0 0 1px 1px red; }
+    box-shadow: inset 0 0 1px 1px #00b3e3; }
+
+#name {
+  box-shadow: inset -1px 0px 0px 0 #ccc;
+  border-top-left-radius: 4px; }
+
+#surname {
+  border-top-right-radius: 4px; }
+
+#email {
+  box-shadow: inset -1px 1px 0 0 #ccc; }
+
+#pass {
+  box-shadow: inset 0px 1px 0px 0 #ccc; }
 
 .form__control {
   border: none;
   padding: 15px 54px;
+  margin-top: 5px;
   font-size: 1.25em;
   color: #fff;
   display: inline-block;
