--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,4 @@
+
 @import url(http:////netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
 
 @font-face {
@@ -22,6 +23,12 @@
 
 }
 
+@mixin centerer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
 @mixin hidden {
 	display: none !important;
@@ -74,7 +81,9 @@ fieldset {
 textarea {
 	resize: vertical;
 }
-
+li{
+	list-style: none;
+}
 /* ==========================================================================
 	 Author's custom styles
 	 ========================================================================== */
@@ -115,14 +124,7 @@ body{
 }
 .popup{
 	width:602px;
-	height:557px;
-	border: 1px solid #000;
-	position: absolute;
-	margin: auto;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
+	@include centerer
 }
 .fa{
 	font-size: 3.75em;
@@ -139,6 +141,24 @@ body{
 	transform: scale(1.1) rotate(360deg);
 	opacity:0.6;
 }
+.active{
+	opacity:1;
+}
+.tabs__item{
+	display:inline-block;
+}
+.tabs__content{
+	width:600px;
+	height:400px;
+	overflow:hidden;
+}
+.slider__item{
+	width:600px;
+	height:400px;
+	background-color: #fff;
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
+}
 .form__list{
 	margin-bottom: 5px;
 }
@@ -154,32 +174,46 @@ body{
 	font-size: 1.25em;
 	color: #ccc;
 }
+// .slider__item, .tab__control{
+// 	display:none;
+// }
+.tri{
+	position:absolute;
+	top:68px;
+	left:46px;
+	width: 0;
+	height: 0;
+	border-left: 18px solid transparent;
+	border-right: 18px solid transparent;
+	border-bottom: 20px solid #fff;
+}
 .form__input{
 	width: 300px;
 	padding: 36px 3px 133px 15px;
 	font-size: 1.5em;
 	border:none;
-	box-shadow: inset 0 0 0 1px  #ccc;
 	outline:none;
 	&:focus{
-		box-shadow: inset 0 0 1px 1px red;
+		box-shadow: inset 0 0 1px 1px #00b3e3;
 	}
-	// &:nth-of-type(1){
-	// 	border-right: 1px solid #ccc;
-	// 	border-bottom: 1px solid #ccc;
-	// 	 border-top-left-radius: 4px;
-	// }
-	//  &:nth-of-type(2){
-	//  	border-top-right-radius: 4px;
-	//  }
-	// &:nth-of-type(3){
-	// 	border-left: 1px solid #ccc;
-	// 	margin-bottom: 5px;
-	// }
+}
+#name{
+	box-shadow: inset -1px 0px 0px 0 #ccc;
+	border-top-left-radius: 4px;
+}
+#surname{
+	border-top-right-radius: 4px;
+}
+#email{
+	box-shadow: inset -1px 1px 0 0 #ccc;
+}
+#pass{
+	box-shadow: inset 0px 1px 0px 0 #ccc;
 }
 .form__control{
 	border:none;
 	padding: 15px 54px;
+	margin-top: 5px;
 	font-size: 1.25em;
 	color:#fff;
 	display:inline-block;
