--- a/css/main.css
+++ b/css/main.css
@@ -179,6 +179,7 @@ body {
   color: #fff;
   display: inline-block;
   cursor: pointer;
+  outline: none;
   opacity: 0.7; }
   .form__control:hover {
     opacity: 1; }
