--- a/sass/main.scss
+++ b/sass/main.scss
@@ -196,6 +196,12 @@ body{
 	&:focus{
 		box-shadow: inset 0 0 1px 1px #00b3e3;
 	}
+	&:valid{
+	
+	}
+	&:invalid{
+	
+	}
 }
 #name{
 	box-shadow: inset -1px 0px 0px 0 #ccc;
